feat: Integración completa de funcionalidades y correcciones
- Integración de Cobru con refresh token y procesamiento de pagos
- Corrección de errores 500 en endpoints de configuración del sistema
- Mejora del manejo de errores en rutas de configuración
- Corrección de keys duplicadas en componentes React
- Integración de nuevo editor de mapa de asientos (SeatMapDesigner)
- Implementación de funcionalidades faltantes en boletas físicas
- Corrección de endpoints de media upload con multer
- Mejora de autenticación en endpoints de administración
- Filtrado de duplicados en categorías de configuración
- Actualización de rutas de refunds y POS

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ backend/.env.local
 backend/.env.development.local
 backend/.env.test.local
 backend/.env.production.local
+backend/config.env
+backend/config.env.local
 
 # Logs
 *.log
