--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eventu-backend",
   "version": "1.0.0",
-  "description": "Backend API para Eventu Platform",
+  "description": "Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
